<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">
<!--    tools:context=".MainActivity">-->
<!--    tools:context=".FirstActivity">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:text="@string/angka1" />
        <EditText
            android:id="@+id/angka1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/angka1"
            android:inputType="numberDecimal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:text="@string/angka2" />
        <EditText
            android:id="@+id/angka2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/angka2"
            android:inputType="numberDecimal" />
    </LinearLayout>

<!--    add button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnTambah"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="0"
            android:text="@string/btnTambah"
            android:enabled="false"/>
        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="0"/>
        <Button
            android:id="@+id/btnKurang"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="0"
            android:text="@string/btnKurang"
            android:enabled="false"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnKali"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="0"
            android:text="@string/btnKali"
            android:enabled="false"/>

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="0"/>
        <Button
            android:id="@+id/btnBagi"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="0"
            android:text="@string/btnBagi"
            android:enabled="false"/>
    </LinearLayout>

    !--TextView Hasil-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:text="@string/hasil" />
        <TextView
            android:id="@+id/hasil"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>


</LinearLayout>